<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<myapp.net.inspire.utils.EulaWebView-->
    <!--android:id="@+id/webViewDisclaimer"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_above="@id/iAgreeBttn"-->
    <!--android:layout_below="@id/headingDisclarimer"-->
    <!--android:background="@color/white" />-->


    <TextView
        android:id="@+id/headingDisclarimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@android:color/transparent"
        android:text="TextView"
        android:textColor="@color/Orange"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headingDisclarimer"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp">

        <myapp.net.inspire.font.AvenirRoman
            android:id="@+id/disclaimerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textSize="@dimen/font_18sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:textColor="@android:color/black"/>

        <myapp.net.inspire.font.AvenirRoman
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/disclaimer_description"
            android:textColor="@android:color/black"/>

        <myapp.net.inspire.font.AvenirRoman
            android:id="@+id/privacyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_first"
            android:textSize="@dimen/font_18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:textColor="@android:color/black"/>
        <myapp.net.inspire.font.AvenirRoman
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/privacy_description"
            android:textColor="@android:color/black"/>

        <myapp.net.inspire.font.AvenirRoman
            android:id="@+id/securityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:textSize="@dimen/font_18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:textColor="@android:color/black"/>
        <myapp.net.inspire.font.AvenirRoman
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/security_description"
            android:textColor="@android:color/black"/>

        <myapp.net.inspire.font.AvenirRoman
            android:id="@+id/notificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="@dimen/font_18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:textColor="@android:color/black"/>
        <myapp.net.inspire.font.AvenirRoman
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/notification_description"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/iAgreeBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/button_i_agree"
            android:layout_gravity="center"/>


    </LinearLayout>
    </ScrollView>


</RelativeLayout>