<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog"
    android:gravity="center"
    android:minWidth="100dp"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTwenty"
        android:fontFamily="sans-serif"
        android:text="Alert"
        android:textColor="@color/black"
        android:textSize="@dimen/largeText" />

    <myapp.net.inspire.font.AvenirRoman
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginTen"
        android:gravity="center"
        android:text="@string/reset_description"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="@dimen/marginTen"
        android:layout_marginTop="@dimen/marginTen"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <myapp.net.inspire.font.AvenirRoman
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginTen"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/largeText"
            android:textStyle="bold" />

        <myapp.net.inspire.font.AvenirRoman
            android:id="@+id/resetPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marginTen"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/reset_plan"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/largeText"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>